apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__errors_on_deferred_responses.snap
---
source: apollo-router/src/services/router_service.rs
expression: "std::str::from_utf8(stream.next_response().await.unwrap().unwrap().to_vec().as_slice()).unwrap()"
---
"\r\n--graphql\r\ncontent-type: application/json\r\n\r\n{\"data\":{\"currentUser\":{\"id\":\"0\"}},\"hasNext\":true}\r\n--graphql\r\n"
