apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__errors_on_incremental_responses.snap
---
source: apollo-router/src/services/router_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "currentUser": {
      "activeOrganization": {
        "id": "0",
        "suborga": [
          {
            "id": "1"
          },
          {
            "id": "2"
          },
          {
            "id": "3"
          }
        ]
      }
    }
  },
  "hasNext": true
}
