apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__filter_nullified_deferred_responses-3.snap
---
source: apollo-router/src/services/router_service.rs
expression: "std::str::from_utf8(last.to_vec().as_slice()).unwrap()"
---
content-type: application/json

{"hasNext":false}
--graphql--

