apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__filter_nullified_deferred_responses.snap
---
source: apollo-router/src/services/router_service.rs
expression: "std::str::from_utf8(primary.to_vec().as_slice()).unwrap()"
---

--graphql
content-type: application/json

{"data":{"currentUser":{"name":"Ada"}},"hasNext":true}
--graphql

