apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__nullability_bubbling.snap
---
source: apollo-router/src/services/router_service.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  },
  "extensions": {
    "valueCompletion": [
      {
        "message": "Cannot return null for non-nullable field Organization.nonNullId",
        "path": [
          "currentUser",
          "activeOrganization"
        ]
      }
    ]
  }
}
