apollo-router/src/services/snapshots/apollo_router__services__router_service__tests__nullability_formatting.snap
---
source: apollo-router/src/services/router_service.rs
expression: json_response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  }
}
